# FalqinParaLib

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
00_data/raw/: flights.rmfalquier.world2024.csv
00_data/raw/igc/: rmfalquier.2023-12-30.19-09-28.IGC  rmfalquier.2024-01-08.17-07-54.IGC  rmfalquier.2024-01-09.16-28-53.IGC  rmfalquier.2024-01-11.18-15-57.IGC  rmfalquier.2024-01-15.17-46-32.IGC  rmfalquier.2024-01-16.20-00-51.IGC  rmfalquier.2024-04-26.10-45-09.IGC  rmfalquier.2024-07-05.09-38-18.IGC  rmfalquier.2024-08-31.10-43-13.IGC
00_data/raw_red/igc/: rmfalquier.2024-09-14.11-12-56.IGC
00_misc/: notes.txt
data/raw/igc/: rmfalquier.2024-01-07.17-12-06.IGC  rmfalquier.2024-01-13.18-06-24.IGC  rmfalquier.2024-01-18.17-40-49.IGC  rmfalquier.2024-04-25.10-55-14.IGC  rmfalquier.2024-07-09.15-06-17.IGC  rmfalquier.2024-08-30.14-20-10.IGC  rmfalquier.2024-09-15.10-57-24.IGC
docs/: mkdocs.yml
docs/docs/: index.md
falqinparalib/: falqinparalib.py  falqinparalib_example.ipynb
falqinparalib/00_archive/: falqinparalib_20250829.py
notebooks/: 0_01_rmfalquier_xcontest_and_igc_exploration.ipynb
paragliding_exploration/: __init__.py  dataset.py  features.py  plots.py
paragliding_exploration/modeling/: predict.py  train.py
